# integracao_dominio_x_siagri

./: .gitignore  Pipfile  configuracoes.xlsx  pyproject.toml
layouts/: exemplo.txt
src/: functions.py  generate_txt_contas_pagar.py  generate_txt_provisao.py  main.py  process_lancamentos.py  read_configuracoes.py  read_lanc_dominio.py
